--- a/css/main.css
+++ b/css/main.css
@@ -44,6 +44,223 @@
   max-width: 1220px;
 }
 
+.practicum {
+  position: relative;
+  z-index: 1;
+  background: url("../img/practicum-bg.svg") no-repeat right bottom;
+  background-size: 463px;
+}
+.practicum .box-text {
+  max-width: 1140px;
+  font-size: 34px;
+  text-align: center;
+  margin: 0 auto;
+}
+
+.days {
+  width: 100%;
+  display: flex;
+  align-items: stretch;
+  font-size: 34px;
+  margin: 80px 0 0;
+}
+.days h3 {
+  width: 50%;
+  font-size: 108px;
+  text-transform: none;
+}
+
+.days-content {
+  width: 50%;
+  display: flex;
+  flex-direction: column;
+}
+.days-content .box-text {
+  max-width: 700px;
+}
+
+.days-icon {
+  margin: 0 0 auto;
+}
+
+.practicum-wrapper {
+  margin: 40px 0 0;
+  display: flex;
+  align-items: flex-start;
+  justify-content: space-between;
+}
+
+.practicum-card {
+  width: calc(33.33% - 10px);
+  margin: 70px 0 20px;
+  color: #FAFAFA;
+  background: #94A3B2;
+  border-radius: 60px;
+  position: relative;
+  z-index: 1;
+  text-align: center;
+  padding: 50px 40px 200px;
+}
+.practicum-card__icon {
+  position: absolute;
+  bottom: 0;
+  left: 50%;
+  transform: translate(-50%, 0);
+}
+.practicum-card h3 {
+  margin: 0 auto 35px;
+}
+.practicum-card .subtitle {
+  margin: 0 auto 25px;
+  color: rgba(250, 250, 250, 0.5);
+}
+.practicum-card .box-text {
+  max-width: 430px;
+  margin: 0 auto;
+}
+.practicum-card:nth-child(2) {
+  margin: 0 0 20px;
+}
+.practicum-card:nth-child(2) .practicum-card__icon {
+  bottom: 32px;
+}
+
+.what-awaits {
+  position: relative;
+  z-index: 1;
+  overflow: hidden;
+}
+.what-awaits__img {
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  overflow: hidden;
+}
+.what-awaits__img img {
+  border-radius: 60px 0 0 60px;
+}
+.what-awaits__content {
+  margin: 0 auto;
+  max-width: 910px;
+  width: 100%;
+}
+.what-awaits-box {
+  width: 100%;
+  padding: 70px 0;
+  display: flex;
+  align-items: flex-start;
+  border-top: 2px solid #94A3B2;
+  font-size: 34px;
+}
+.what-awaits-box:last-child {
+  border-bottom: 2px solid #94A3B2;
+}
+.what-awaits-box__number {
+  color: #94A3B2;
+  font-size: 45px;
+  font-family: "Viaoda Libre", sans-serif;
+  min-width: 135px;
+}
+.what-awaits-box__text {
+  padding: 0 0 0 20px;
+}
+.what-awaits-box h4 {
+  text-transform: uppercase;
+  margin: 0 0 20px;
+}
+
+.expert {
+  margin: 250px 0 100px;
+}
+
+.expert-content {
+  width: 100%;
+  background: #94A3B2 url("../img/expert-bg.svg") no-repeat center top;
+  background-size: 100%;
+  border-radius: 80px;
+  color: #0D284C;
+  padding: 0 20px 80px;
+  text-align: center;
+}
+.expert-content h2 {
+  max-width: 1430px;
+}
+.expert-content h2::before {
+  background: url("../img/title-decor-blue.svg") no-repeat center;
+  background-size: 100%;
+}
+.expert-content h2 span {
+  text-transform: uppercase;
+}
+.expert-content .box-text {
+  max-width: 910px;
+  margin: 0 auto;
+}
+
+.expert-photo {
+  margin: -190px auto 55px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.intensive-give {
+  overflow: hidden;
+  width: 100%;
+}
+
+.intensive-give-slider {
+  min-width: 4500px;
+}
+.intensive-give-slider .slick-slide {
+  margin: 0 20px 0 0;
+}
+
+.intensive-give-card {
+  width: 910px;
+  height: 100%;
+  min-height: 1030px;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  color: #fff;
+  z-index: 1;
+  position: relative;
+  padding: 70px 56px;
+  border-radius: 60px;
+  font-size: 34px;
+}
+.intensive-give-card__bg {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  border-radius: 60px;
+  left: 0;
+  top: 0;
+  position: absolute;
+  z-index: -1;
+}
+.intensive-give-card__content {
+  position: relative;
+  z-index: 1;
+  border-radius: 50px;
+  width: 100%;
+  background: #94A3B2;
+  padding: 50px 50px 40px;
+}
+.intensive-give-card .subtitle {
+  margin: 0 0 50px;
+  color: rgba(250, 250, 250, 0.5);
+}
+.intensive-give-card h4 {
+  font-family: "Inter Tight", sans-serif;
+  text-transform: uppercase;
+  font-weight: 600;
+  font-size: 34px;
+  margin: 0 0 13px;
+}
+
 .tabs__caption {
   display: flex;
   align-items: flex-start;
@@ -109,7 +326,7 @@
 .program-card {
   flex: 1;
   border: 3px solid #0D284C;
-  padding: 50px 40px;
+  padding: 50px 10px 100px;
   text-align: center;
   position: relative;
   z-index: 1;
@@ -125,6 +342,9 @@
   left: 0;
   bottom: 0;
   max-width: none;
+}
+.program-card:nth-child(2) {
+  padding-bottom: 250px;
 }
 .program-card:last-child {
   margin: 0 0 0 -3px;
